<resources>
    <string name="app_name">Audio Recorder Parkinson App</string>
    <string name="start_timer">00:00.00</string>
    <string name="delete_button">Delete button</string>
    <string name="record_button">Record button</string>
    <string name="list_button">List button</string>
    <string name="done_button">Done button</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="save_record">Save Record?</string>
    <string name="ka_ka_ka">Ka-ka-ka</string>
    <string name="pakata">Pakata</string>
    <string name="pa_pa_pa">Pa-pa-pa</string>
    <string name="pataka">Pataka</string>
    <string name="petaka">Petaka</string>
    <string name="ta_ta_ta">Ta-ta-ta</string>
    <string name="parkinson_s_detection_app">Parkinson\'s Detection App</string>
    <string name="ddk_analysis">DDK Analysis</string>
    <string name="words">Words</string>
    <string name="apto">APTO</string>
    <string name="atleta">Atleta</string>
    <string name="blusa">Blusa</string>
    <string name="bodega">Bodega</string>
    <string name="braso">Braso</string>
    <string name="campana">Campana</string>
    <string name="caucho">caucho</string>
    <string name="clavo">clavo</string>
    <string name="coco">coco</string>
    <string name="crema">crema</string>
    <string name="flecha">flecha</string>
    <string name="drama">drama</string>
    <string name="fruta">fruta</string>
    <string name="gato">gato</string>
    <string name="grito">grito</string>
    <string name="llueve">llueve</string>
    <string name="pato">pato</string>
    <string name="plato">plato</string>
    <string name="presa">presa</string>
    <string name="reina">reina</string>
    <string name="viaje">viaje</string>
</resources>