<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="559dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/ka_ka_ka"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="470dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/pakata"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="382dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/pa_pa_pa"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="381dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="286dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/pataka"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="477dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/petaka"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="573dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/ta_ta_ta"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="588dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/apto"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="588dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/atleta"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="587dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/blusa"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="539dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/bodega"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="539dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/braso"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="281dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="539dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/campana"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="492dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/caucho"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="492dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/clavo"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="488dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/coco"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="439dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/crema"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="438dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/drama"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="438dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/flecha"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="390dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/fruta"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="390dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/gato"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="390dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/grito"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="342dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/llueve"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>